--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="title_activity_progress_bar">ProgressBarActivity</string>
+    <string name="title_activity_google_maps">GoogleMapsActivity</string>
 </resources>
